# eco-ar

./: .gitignore  Dockerfile  README.md  mypy.ini  pyproject.toml  scrape_ttc.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
nb/: scrape_ttc.ipynb
tests/: test_selenium_resource.py
utils/: dataclass.py  logger.py  scraper.py  selenium_resource.py
