[tool.poetry]
name = "rad-eco-ar-map"
version = "0.1.0"
description = ""
authors = ["Tim Hitchins <tim.x.hitchins@gmail.com>"]
readme = "README.md"
packages = [{ include = "rad_eco_ar_map" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
# opencv-python = "^4.10.0.84"
# pytesseract = "^0.3.13"
selenium = "^4.26.1"
ipykernel = "^6.29.5"
# easyocr = "^1.7.2"
types-selenium = "^3.141.9"
pytesseract = "^0.3.13"
opencv-python = "^4.10.0.84"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
